--- a/index.html
+++ b/index.html
@@ -52,19 +52,22 @@
     </header>
 
     <main class="section">
-      <div class="container-2">
+      
       <!--Section Main -->
         <section class="section-main">
-          <h1 class="section-main-title">
-            ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА
-          </h1>
-          <ul class="btn-1">
-            <li><button type="button" class="btn-1">Заказать услугу</button></li>
-          </ul>
+          <div class="container-2">
+            <h1 class="section-main-title">
+              ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА
+            </h1>
+            <ul class="btn-1-gen">
+              <li><button type="button" class="btn-1">Заказать услугу</button></li>
+            </ul>
+          </div>
         </section>
 
         <!--Section Features-->
         <section class="section-features">
+          <div class="container-3">
           <h2 hidden>Особливості</h2>
           <ul class="section-features-list">
             <li class="section-features-item">
@@ -96,10 +99,12 @@
               </p>
             </li>
           </ul>
+          </div>
         </section>
 
         <!--section What we do-->
         <section class="section-whadwedo">
+          <div class="container-4">
           <!--work-->
           <h2 class="section-whadwedo-title">Чем мы занимаемся</h2>
           <ul class="section-whadwedo-list">
@@ -125,70 +130,72 @@
               />
             </li>
           </ul>
+          </div>
         </section>
 
         <!--section OurTeam-->
         <section class="section-ourteam">
-          <h2 class="section-ourteam-title">Наша команда</h2>
-          <ul class="section-ourteam-list">
-            <!--d1-->
-            <li class="section-ourteam-photo-1">
-              <img
-                class="photo-Ihor"
-                src="./images/team-card-ihor.jpg"
-                alt="фото-Игоря-Демьяненка"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-ourteam-after-title-ihor">Игорь Демьяненко</h3>
-              <p lang="en" class="section-ourteam-job-ihor">Product Designer</p>
-            </li>
+          <div class="container-5">
+            <h2 class="section-ourteam-title">Наша команда</h2>
+            <ul class="section-ourteam-list">
+              <!--d1-->
+              <li class="section-ourteam-photo-1">
+                <img
+                  class="photo-Ihor"
+                  src="./images/team-card-ihor.jpg"
+                  alt="фото-Игоря-Демьяненка"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="section-ourteam-after-title-ihor">Игорь Демьяненко</h3>
+                <p lang="en" class="section-ourteam-job-ihor">Product Designer</p>
+              </li>
 
-            <!--d2-->
-            <li class="section-ourteam-photo-olga">
-              <img
-                class="photo-olga"
-                src="./images/team-card-olga.jpg"
-                alt="фото-Ольги-Репины"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-ourteam-after-title-olga">Ольга Репина</h3>
-              <p lang="en" class="section-ourteam-job-olga">Frontend Developer</p>
-            </li>
+              <!--d2-->
+              <li class="section-ourteam-photo-olga">
+                <img
+                  class="photo-olga"
+                  src="./images/team-card-olga.jpg"
+                  alt="фото-Ольги-Репины"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="section-ourteam-after-title-olga">Ольга Репина</h3>
+                <p lang="en" class="section-ourteam-job-olga">Frontend Developer</p>
+              </li>
 
-            <!--d3-->
-            <li class="section-ourteam-photo-nikolai">
-              <img
-                class="photo-nikolai"
-                src="./images/team-card-nikolai.jpg"
-                alt="фото-Николая-Тарасова"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-ourteam-after-title-nikolai">Николай Тарасов</h3>
-              <p lang="en" class="section-ourteam-job-nikolai">Marketing</p>
-            </li>
-            <!--d4-->
-            <li class="section-ourteam-photo-michail">
-              <img
-                class="photo-michail"
-                src="./images/michail-card-4.jpg"
-                alt="фото-Михаила-Ермакова"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-ourteam-after-title-michail">Михаил Ермаков</h3>
-              <p lang="en" class="section-ourteam-job-michail">UI Designer</p>
-            </li>
-          </ul>
-        </div>
+              <!--d3-->
+              <li class="section-ourteam-photo-nikolai">
+                <img
+                  class="photo-nikolai"
+                  src="./images/team-card-nikolai.jpg"
+                  alt="фото-Николая-Тарасова"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="section-ourteam-after-title-nikolai">Николай Тарасов</h3>
+                <p lang="en" class="section-ourteam-job-nikolai">Marketing</p>
+              </li>
+              <!--d4-->
+              <li class="section-ourteam-photo-michail">
+                <img
+                  class="photo-michail"
+                  src="./images/michail-card-4.jpg"
+                  alt="фото-Михаила-Ермакова"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="section-ourteam-after-title-michail">Михаил Ермаков</h3>
+                <p lang="en" class="section-ourteam-job-michail">UI Designer</p>
+              </li>
+            </ul>
+          </div>
       </section>
     </main>
 
     <!--нижня лінія з адресами-->
     <footer class="footer">
-      <div class="container-3">
+      <div class="container-6">
         <a href="/" lang="en" class="footer-name"
           >Web<span class="footer-name-studio">Studio</span></a
         >
