--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,13 @@
             </ul>
         </div>
           <!--Our Projects-->
+          
           <ul class="-our-projects-photo">
+            <h1 hidden>Our projects</h1>
             <div class="container-9">
                 <li class="section-our-projects-1">
                   <img src="./images/ноут+чуваки.jpg" alt="ноут+чуваки" width="370" />
-                  <h1 class="our-projects-technokriak">Технокряк</h1>
+                  <h2 class="our-projects-technokriak">Технокряк</h2>
                   <p class="description">Веб-сайт</p>
                 </li>
 
@@ -85,9 +87,9 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-new-orlean" lang="en">
+                  <h2 class="our-projects-new-orlean" lang="en">
                     Постер <span>New Orlean vs Golden Star</span>
-                  </h1>
+                  </h2>
                   <p class="description">Дизайн</p>
                 </li>
 
@@ -98,9 +100,9 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-seafood" lang="en">
+                  <h2> class="our-projects-seafood" lang="en">
                     Ресторан <span>Seafood</span>
-                  </h1>
+                  </h2>
                   <p class="description">Приложение</p>
                 </li>
 
@@ -111,9 +113,9 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-prime" lang="en">
+                  <h2 class="our-projects-prime" lang="en">
                     Проект <span>Prime</span>
-                  </h1>
+                  </h2>
                   <p class="description">Маркетинг</p>
                 </li>
 
@@ -124,9 +126,9 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-boxes" lang="en">
+                  <h2 class="our-projects-boxes" lang="en">
                     Проект <span>Boxes</span>
-                  </h1>
+                  </h2>
                   <p class="description">Приложение</p>
                 </li>
 
@@ -137,9 +139,9 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-inspiration" lang="en">
+                  <h2 class="our-projects-inspiration" lang="en">
                     Inspiration has no Borders
-                  </h1>
+                  </h2>
                   <p class="description">Веб-сайт</p>
                 </li>
 
@@ -150,9 +152,9 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-limited" lang="en">
+                  <h2 class="our-projects-limited" lang="en">
                     Издание <span>Limited Edition</span>
-                  </h1>
+                  </h2>
                   <p class="description">Дизайн</p>
                 </li>
 
@@ -163,7 +165,7 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-lab" lang="en">Проект <span>LAB</span></h1>
+                  <h2 class="our-projects-lab" lang="en">Проект <span>LAB</span></h2>
                   <p class="description">Маркетинг</p>
                 </li>
 
@@ -174,7 +176,7 @@
                     width="370"
                     height="294"
                   />
-                  <h1 class="our-projects-business">Growing Business</h1>
+                  <h2 class="our-projects-business">Growing Business</h2>
                   <p class="description">Приложение</p>
                 </li>
               </ul>
