--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">\
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <title>Фирма-2</title>
     
     <link rel="stylesheet" href="./css/styles.css" />
@@ -19,8 +19,7 @@
     <!---ШАпка-->
     <header class="new-header">
       <div class="container-7">
-        <a href="/" lang="en" class="new-header-name"
-          >Web<span class="new-header-studio">Studio</span></a
+        <a href="/" lang="en" class="new-header-name">Web<span class="new-header-studio">Studio</span></a
         >
         <nav class="new-nav">
           <ul class="new-nav-list">
@@ -187,8 +186,7 @@
     <!--Portfolio Footer-->
     <footer class="new-footer">
       <div class="container-10">
-        <a href="/" lang="en" class="new-footer-name"
-          >Web<span class="new-footer-studio">Studio</span></a
+        <a href="/" lang="en" class="new-footer-name">Web<span class="new-footer-studio">Studio</span></a
         >
         <address class="new-footer-address">
           <ul class="new-footer-address-list">
